<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_value"
        android:layout_margin="@dimen/dp_10"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expense_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_expense_name"
        android:singleLine="true"
        android:layout_margin="@dimen/dp_10"/>

    <EditText
        android:id="@+id/expense_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/enter_expense_value"
        android:layout_margin="@dimen/dp_10"/>


</LinearLayout>